Java list get fixes